--- a/contribute.html
+++ b/contribute.html
@@ -180,8 +180,41 @@
 
                 <div style="margin-top: 2rem;">
                     <h4>Où commencer ?</h4>
-                    <p style="font-size: 0.9rem; color: #aaa;">Consultez les issues "Good First Issue" sur nos dépôts.
+                    <p style="font-size: 0.9rem; color: #aaa; margin-bottom: 1rem;">
+                        Consultez nos issues "Good First Issue" — des tâches accessibles pour bien démarrer :
                     </p>
+                    <ul class="download-list">
+                        <li>
+                            <a href="https://github.com/bibliogenius/bibliogenius-app/issues?q=is%3Aopen+label%3A%22good+first+issue%22"
+                                class="download-btn" aria-label="Voir les Good First Issues pour l'application Flutter">
+                                <span class="download-icon">📱</span>
+                                <div>
+                                    <strong>App Flutter</strong><br>
+                                    <small>Traductions, tests, UI</small>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/bibliogenius/bibliogenius-public/issues?q=is%3Aopen+label%3A%22good+first+issue%22"
+                                class="download-btn" aria-label="Voir les Good First Issues pour le site web">
+                                <span class="download-icon">🌐</span>
+                                <div>
+                                    <strong>Site Web</strong><br>
+                                    <small>Accessibilité, traduction</small>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/bibliogenius/bibliogenius/issues?q=is%3Aopen+label%3A%22good+first+issue%22"
+                                class="download-btn" aria-label="Voir les Good First Issues pour le serveur Rust">
+                                <span class="download-icon">🦀</span>
+                                <div>
+                                    <strong>Serveur Rust</strong><br>
+                                    <small>Documentation, tests</small>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
