--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </svg>
                     <span id="btn-github-text">Voir le Code (GitHub)</span>
                 </a>
-                <a href="#" onclick="openContact(event)" id="btn-tester" class="btn btn-secondary">
+                <a href="#tester" id="btn-tester" class="btn btn-secondary">
                     Devenir Testeur
                 </a>
             </div>
@@ -112,6 +112,20 @@
         </div>
     </section>
 
+    <!-- Test the App Section -->
+    <section id="tester" class="test-app">
+        <div class="container">
+            <h2 id="test-title">Testez l'application</h2>
+            <p id="test-desc">BiblioGenius est disponible en bêta. Rejoignez les premiers testeurs !</p>
+            <div class="test-buttons">
+                <a href="https://testflight.apple.com/v1/app/6757465461" target="_blank" class="btn btn-primary">
+                    🍎 <span id="btn-testflight-text">Tester sur iOS (TestFlight)</span>
+                </a>
+            </div>
+            <p id="android-note" class="android-note">🤖 <span id="android-note-text">Android bientôt disponible sur F-Droid</span></p>
+        </div>
+    </section>
+
     <!-- Free Your Library Section -->
     <!-- <section class="free-library">
          <div class="container">
@@ -160,6 +174,10 @@
                 hero_subtitle: "Gérez vos livres, gardez vos données, partagez avec vos voisins.<br><span class=\"hero-tagline\">Souveraineté Numérique & Open Source</span>",
                 btn_github: "Voir le Code (GitHub)",
                 btn_tester: "Devenir Testeur",
+                test_title: "Testez l'application",
+                test_desc: "BiblioGenius est disponible en bêta. Rejoignez les premiers testeurs !",
+                btn_testflight: "Tester sur iOS (TestFlight)",
+                android_note: "Android bientôt disponible sur F-Droid",
                 feature_local_title: "Local-First",
                 feature_local_desc: "Vos données vous appartiennent. Fonctionne hors-ligne, sans cloud.",
                 feature_p2p_title: "Partage Réseau",
@@ -190,6 +208,10 @@
                 hero_subtitle: "Manage your books, keep your data, share with neighbors.<br><span class=\"hero-tagline\">Digital Sovereignty & Open Source</span>",
                 btn_github: "View Code (GitHub)",
                 btn_tester: "Become a Tester",
+                test_title: "Test the App",
+                test_desc: "BiblioGenius is available in beta. Join the first testers!",
+                btn_testflight: "Test on iOS (TestFlight)",
+                android_note: "Android coming soon on F-Droid",
                 feature_local_title: "Local-First",
                 feature_local_desc: "Your data belongs to you. Works offline, no cloud required.",
                 feature_p2p_title: "Network Sharing",
@@ -220,6 +242,10 @@
                 hero_subtitle: "Gestiona tus libros, guarda tus datos, comparte con vecinos.<br><span class=\"hero-tagline\">Soberanía Digital y Open Source</span>",
                 btn_github: "Ver Código (GitHub)",
                 btn_tester: "Ser Tester",
+                test_title: "Prueba la aplicación",
+                test_desc: "BiblioGenius está disponible en beta. ¡Únete a los primeros testers!",
+                btn_testflight: "Probar en iOS (TestFlight)",
+                android_note: "Android próximamente en F-Droid",
                 feature_local_title: "Local-First",
                 feature_local_desc: "Tus datos te pertenecen. Funciona sin conexión, sin nube.",
                 feature_p2p_title: "Compartir en Red",
@@ -250,6 +276,10 @@
                 hero_subtitle: "Verwalten Sie Ihre Bücher, behalten Sie Ihre Daten, teilen Sie mit Nachbarn.<br><span class=\"hero-tagline\">Digitale Souveränität & Open Source</span>",
                 btn_github: "Code ansehen (GitHub)",
                 btn_tester: "Tester werden",
+                test_title: "Testen Sie die App",
+                test_desc: "BiblioGenius ist als Beta verfügbar. Werden Sie einer der ersten Tester!",
+                btn_testflight: "Auf iOS testen (TestFlight)",
+                android_note: "Android bald auf F-Droid verfügbar",
                 feature_local_title: "Local-First",
                 feature_local_desc: "Ihre Daten gehören Ihnen. Funktioniert offline, ohne Cloud.",
                 feature_p2p_title: "Netzwerk-Teilen",
@@ -300,6 +330,10 @@
             setHtml('hero-subtitle', t.hero_subtitle);
             setText('btn_github-text', t.btn_github);
             setText('btn-tester', t.btn_tester);
+            setText('test-title', t.test_title);
+            setText('test-desc', t.test_desc);
+            setText('btn-testflight-text', t.btn_testflight);
+            setText('android-note-text', t.android_note);
             setText('feature-local-title', t.feature_local_title);
             setText('feature-local-desc', t.feature_local_desc);
             setText('feature-p2p-title', t.feature_p2p_title);
